trying for a better overflow layout in CarouselComponent.jsx TeamComponent.jsx, need fixing

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ i {
     margin: 0;
 }
 
+.carousel.img {
+    width: 600px !important;
+    height: auto !important;
+}
+
 
 
 
